manifests/apps/manifests/matoruru.com/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matoruru-com
  labels:
    shared-gateway-access: 'true'
