manifests/apps/manifests/matoruru.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: matoruru-com
spec:
  selector:
    matchLabels:
      app: matoruru.com
  replicas: 2
  template:
    metadata:
      labels:
        app: matoruru.com
    spec:
      containers:
      - image: matoruru/matoru.ru:latest
        imagePullPolicy: Always
        name: web
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 20m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 500Mi
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 60
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 10
          periodSeconds: 1
