manifests/apps/manifests/matoruru.com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: matoruru.com
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: matoruru.com
  type: ClusterIP
