manifests/apps/manifests/matoruru.com/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - matoruru.com
  parentRefs:
  - kind: Gateway
    name: common
    namespace: kube-system
  rules:
  - backendRefs:
    - name: web
      port: 8080
